--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,12 +7,5 @@ jobs:
   EC2-Deploy:
     runs-on: ubuntu-latest
     steps:
-      - id: deploy
-        uses: bitovi/github-actions-deploy-docker-to-ec2@v0.5.0
-        with:
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_default_region: us-east-1
-          ec2_instance_type: t2.micro
-          ec2_volume_size: 8 GB
-          aws_ami_id: ami-06e46074ae430fba6
+      - run: echo "hola mundo"
+      
