--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,5 +7,7 @@ jobs:
   EC2-Deploy:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "hola mundo"
+      - run: chmod 400 ${{ secrets.SSKEY }}
+      - run: ssh -i ${{ secrets.SSKEY }} ubuntu@ec2-54-91-176-242.compute-1.amazonaws.com
+      - run: ls
       
