--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,10 +7,13 @@ jobs:
   EC2-Deploy:
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{vars.KEY}} > ./MYLLAVE.pem
+      - run: echo $SSH_HOST
+      - run: echo $SSH_HOST > ./MYLLAVE.pem
       - run: cat MYLLAVE.pem
       - run: chmod 400 ${{ secrets.SSKEY }}
       - run: ssh -i ${{ secrets.SSKEY }} ubuntu@ec2-54-91-176-242.compute-1.amazonaws.com
       - run: ls
       - run: pwd
+      env:
+          SSH_HOST: ${{ secrets.SSKEY }}
       
