--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,9 @@ jobs:
   EC2-Deploy:
     runs-on: ubuntu-latest
     steps:
-      - run: | echo "$SSH_HOST"
+      - run: "hola"
+      - run: | 
+        echo "$SSH_HOST"
       - run: echo $SSH_HOST > ./MYLLAVE.pem
       - run: cat MYLLAVE.pem
       - run: chmod 400 ${{ secrets.SSKEY }}
